# storage/api-docs/api-docs.json
@@ -520,6 +520,10 @@
                                             "192.168.1.1",
                                             "10.0.0.0/24"
                                         ]
+                                    },
+                                    "entreprise_id": {
+                                        "type": "uuid",
+                                        "example": "123e4567-e89b-12d3-a456-426614174000"
                                     }
                                 },
                                 "type": "object"
